--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -36,6 +36,7 @@
   .codes .card_wrap .card .inner{font-family: 'Montserrat', sans-serif;font-weight:400;border-right:1px solid #ccc;border-left:1px solid #ccc;float:left;width:57%;padding:1.5%;}
   .codes .card_wrap .card .inner>.regular{color:#000;font-size:17px;border-bottom:2px solid #000;}
   .codes .card_wrap .card .inner>.regular>em{background:#000;padding:0 5px;color:#fff;}
+  .codes .card_wrap .card .inner>.shipping_condition{display:block;font-size:12px;}
   .codes .card_wrap .card .inner>p>a{line-height:1.4;height:2.8em;overflow:hidden;margin:10px 0;text-decoration:none;color:#616161;display:block;}
   .codes .card_wrap .card .inner>em{display:block;margin-right:5px;}
   .codes .card_wrap .card .inner>em>span{font-size:15px;color:#ccc;text-decoration:line-through;margin-left:5px;}
@@ -73,6 +74,7 @@
   .codes .card_wrap .card .inner{padding:7px;font-family: 'Montserrat', sans-serif;font-weight:400}
   .codes .card_wrap .card .inner>.regular{font-size:13px;border-bottom:2px solid #000;}
   .codes .card_wrap .card .inner>.regular>em{background:#000;padding:0 5px;color:#fff;}
+  .codes .card_wrap .card .inner>.shipping_condition{display:block;font-size:12px;}
   .codes .card_wrap .card .inner>p{margin:10px 0;}
   .codes .card_wrap .card .inner>p>a{font-size:13px;line-height:1.4;height:auto;overflow:visible;margin:10px 0 0 0;text-decoration:none;color:#000;}
   .codes .card_wrap .card .inner>em{display:block;margin-right:5px;font-size:13px;font-weight:400;}
