--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -15,7 +15,7 @@
               <ul>
                 <li>Deals & pricing may change or expire at anytime.</li>
                 <li>Some of promotion codes can expire fast.</li>
-                <li>Free Shipping: Prime or $35+ of all other eligible items.<a href="/blog/blog_01">(What's PRIME?)</a></li>
+                <li>Free Shipping: Prime or $25+ of all other eligible items.<a target="_blank" href="/blogs/blog_01">(What's PRIME?)</a></li>
                 <li>Oh,igottabuythis is a participant in the Amazon Services LLC Associates Program & the Amazon EU Associates Programme, an affiliate advertising program designed to provide a means for us to earn fees by linking to Amazon.com, Amazon.ca, Amazon.co.uk and affiliated sites.</li>
                 <li>Our website contains affiliate link which means that if you click on one of the product links and buy we’ll receive a small commission. This help supports us and allows us to continue to keep finding and sharing good deals.</li>
               </ul>
