--- a/app/views/promocodes_days/_day_02.html.erb
+++ b/app/views/promocodes_days/_day_02.html.erb
@@ -4,6 +4,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>20% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Wc7JwS">True Wireless Earbuds Bluetooth 5.0 Headphones, Sports in-Ear TWS Stereo Mini Headset w/Mic Extra Bass IPX5 Sweatproof</a></p>
     <div class="code_high">
       <p><span>Take <strong>20% off at $49.99</strong> using code:20STEVIES</span></p>
@@ -21,6 +22,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>55% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2XQCwQg">nvisible Laptop Stand Portable-RUCACIO Adhesive Laptop Kickstand Lightweight Stand </a></p>
     <div class="code_high">
       <p><span>Take <strong>55% off at $13.99</strong> using code:55NHCF8J</span></p>
@@ -38,6 +40,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>75% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Pxrxs9">Travel Laptop Backpack,IHONEY Waterproof Slim Casual Durable Student Bag Bookbag Fits 15.6 Inch Laptop</a></p>
     <div class="code_high">
       <p><span>Take <strong>75% off at $49.99</strong> using code:75Q52TKU</span></p>
@@ -55,6 +58,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>45% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Lahnzb">BESTEK Travel Adapter and Converter Combo, 220v to 110v Voltage Converter with All-in-one International Power Adapter</a></p>
     <div class="code_high">
       <p><span>Take <strong>45% off at $36.99</strong> using code:45UEPJS2</span></p>
@@ -72,6 +76,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>40% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2GFaosi">BEWELL Mens Wooden Watches Stylish Analog Quartz Movement Chronograph Handmade Wood Watch for Men</a></p>
     <div class="code_high">
       <p><span>Take <strong>40% off at $39.99</strong> using code:403HP88E</span></p>
@@ -89,6 +94,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Pxs2m1">PS4 Controller Charger, DualShock 4 PS4 Controller USB Charging Station Dock with...</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $14.99</strong> using code:50D2DPOP</span></p>
@@ -106,6 +112,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>60% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2GFT1I1">KEVENZ Advanced Goose Feather Badminton Shuttlecocks,Nylon Feather Shuttlecocks...</a></p>
     <div class="code_high">
       <p><span>Take <strong>60% off at $18.99</strong> using code:60H83JXC</span></p>
@@ -123,6 +130,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2UNwQEV">YOLIX High Waisted Capri Leggings for Women - Tummy Control Soft Opaque Slim Pants for Yoga Workout Cycling Running</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $31.99</strong> using code:50VRN57K</span></p>
@@ -140,6 +148,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2DAko5C">Woogwin Holographic Running Belt Waist Pack Water Resistant Travel Runners Belt Fanny Pack for Fitness: Outdoors Running</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $13.99</strong> using code:50XVN739</span></p>
@@ -157,6 +166,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2L9c3vC">WOOLIKE Men's Sports Style Polarized Sunglasses for Cycling Running Fishing Driving Golf Unbreakable Al-Mg Frame Metal Glasses W819</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $19.99</strong> using code:502RPN8E</span></p>
@@ -174,6 +184,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2GP5k64">FUUNSOO Hip Resistance Bands for Legs and Butt Exercise Bands Thigh Workout Bands Fitness Circle Booty Loop Bands Rubber...</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $19.99</strong> using code:50ICK4AV</span></p>
@@ -191,6 +202,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>30% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2XV1A8N">FUUNSOO Resistance Bands, 5 Packs Gradient Pink Booty Bands Resistance Bands for Hips, Legs, Butts, Glutes...</a></p>
     <div class="code_high">
       <p><span>Take <strong>30% off at $10.99</strong> using code:30B1699C</span></p>
@@ -208,6 +220,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>20% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2J1tyeI">UNK NBA Men's Fleece Hoodie Pullover Sweatshirt Poly Midtown</a></p>
     <div class="code_high">
       <p><span>Take <strong>20% off at $40.00</strong> using code:20OKCFLEECE</span></p>
@@ -225,6 +238,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>20% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2DAQUVa">UNK NBA Men's Fleece Hoodie Pullover Sweatshirt Poly Midtown</a></p>
     <div class="code_high">
       <p><span>Take <strong>20% off at $27.72</strong> using code:20GSWPOLY</span></p>
@@ -242,6 +256,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>20% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2ULcFaj">UNK NBA Men's Fleece Hoodie Pullover Sweatshirt Poly Midtown</a></p>
     <div class="code_high">
       <p><span>Take <strong>20% off at $40.00</strong> using code:20FLEECE</span></p>
@@ -259,6 +274,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>60% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2DARmmk">TAIL UP Dog Harness - Adjustable No-Pull Reflective Pet Harness Mesh Vest, Easy On/Off Mesh Harness Small Medium Large Dogs</a></p>
     <div class="code_high">
       <p><span>Take <strong>60% off at $16.99</strong> using code:60Z1I7SC</span></p>
@@ -276,6 +292,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>15% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2DDXoCu">Serpent And The Sun Tales Of An Aztec Apprentice</a></p>
     <div class="code_high">
       <p><span>Take <strong>15% off at $7.95</strong> using code:15X2ZJI2</span></p>
@@ -293,6 +310,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>20% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2DE0u9C">OJAS STUDIO Date & Grain Bites, Ginger Cinnamon & Chia, 7-serving large pouch, 7.9oz, made with organic dates & oats, no artificial sweeteners</a></p>
     <div class="code_high">
       <p><span>Take <strong>20% off at $10.50</strong> using code:20FRIENDS</span></p>
@@ -310,6 +328,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>20% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2L8S2pd">KEDSUM 3W LED Rechargeable Clip on Light, Dimmable Reading Light with 3 Lighting Modes, 11 Dimmer Levels</a></p>
     <div class="code_high">
       <p><span>Take <strong>20% off at $19.99</strong> using code:20Y6IZXR</span></p>
@@ -327,6 +346,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>30% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2IMDdXi">LOHAS Fence Post Solar Lights, 8 LEDS Deck Post Solar Lights for Security, Sensor Lights Outdoor, Daylight White 6000K...</a></p>
     <div class="code_high">
       <p><span>Take <strong>30% off at $20.99</strong> using code:30PQ8BSH</span></p>
