--- a/app/views/promocodes_days/_day_04.html.erb
+++ b/app/views/promocodes_days/_day_04.html.erb
@@ -4,6 +4,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>65% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Y26z7R">JOYROOM Bluetooth Headphones - Upgraded Version - Wireless Magnetic Earbuds Sweatproof Waterproof Bluetooth Earphones</a></p>
     <div class="code_high">
       <p><span>Take <strong>65% off at $21.99</strong> using code:65XVDE9X</span></p>
@@ -21,6 +22,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>8% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2J5SO3J">Volantech Component to hdmi Converter,5RCA Component RGB YPbPr to HDMI v1.4 HDCP Video Audio Converter Support</a></p>
     <div class="code_high">
       <p><span>Take <strong>8% off at $18.99</strong> using code:08IAWHF9</span></p>
@@ -38,6 +40,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>70% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2XWBgv4">pFORSPARK 4K HDMI Cable 45 Feet HDMI 2.0 - High Speed 18Gbps - Gold Plated Connectors - Compatible Ultra HD bluray Xbox PS4...</a></p>
     <div class="code_high">
       <p><span>Take <strong>70% off at $29.99</strong> using code:70P1ME7V</span></p>
@@ -55,6 +58,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>60% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2ZMdfIQ">Mini Wireless Earbuds Bluetooth Earphone in-Ear Barsone Earpiece w/Built-in Microphone 6hrs Playtime Car Bluetooth Headset</a></p>
     <div class="code_high">
       <p><span>Take <strong>60% off at $22.99</strong> using code:60N9CJT5</span></p>
@@ -72,6 +76,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>65% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Jcma0r">Portble Wireless Bluetooth Speaker Built-in Mic (2-Pack), barsone Outdoor Loud Powerful 5W Audio Driver IPX6 Waterproof...</a></p>
     <div class="code_high">
       <p><span>Take <strong>65% off at $58.99</strong> using code:65THQXQJ</span></p>
@@ -89,6 +94,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2XX4o5f">Invisible Laptop Stand Portable-RUCACIO Adhesive Laptop Stand Lightweight Kickstand Foldable...</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $11.99</strong> using code:50WXSPAV</span></p>
@@ -106,6 +112,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>$4.00 OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2VDTKTm">Outlet Wall Mount Holder Stand for Echo Dot 3RD Gen, A Space-Saving Solution Alex Holder for Smart Home Speakers in Kitchens...</a></p>
     <div class="code_high">
       <p><span>Take <strong>$4.00 off at $11.99</strong> using code:4WALLMOUNT3</span></p>
@@ -123,6 +130,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>45% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2VylPvA">AICOOK Juicer, Juice Extractor with with Non-Slip Feet with with 3'' Wide Mouth, 3 Speed Centrifugal Fruits and Vegs, BPA-Free</a></p>
     <div class="code_high">
       <p><span>Take <strong>45% off at $57.99</strong> using code:45BYND7M</span></p>
@@ -140,6 +148,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2DARWQL">All in One Bottle Opener, Can, Soda, and Jar Openers, Twist Off Lid – Jar Opener for Seniors and Arthritic Hands</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $11.49</strong> using code:50VVLOYQ</span></p>
@@ -157,6 +166,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2DFUU6N">Kitchen Chef's Knives,VOSIN Wavy Edge Bread Knife, Stainless Steel Blade Bread Steak Cutting Knife for Kitchen Black</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $12.99</strong> using code:50PLGFIT</span></p>
@@ -174,6 +184,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>30% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2XXFtia">BINWO BBQ Grill Gloves, Best Versatile Heat Resistant Oven Gloves, Cooking Kitchen Pot Holders and Oven Mitts...</a></p>
     <div class="code_high">
       <p><span>Take <strong>30% off at $13.99</strong> using code:3064B9JN</span></p>
@@ -191,6 +202,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>15% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Y28t8v">Apericena Wine Decanter and Aerating Carafe Set, Hand-Blown Fine Crystal, 100% Lead Free, 90 oz. - Decanters with...</a></p>
     <div class="code_high">
       <p><span>Take <strong>15% off at $41.60</strong> using code:151U85DS</span></p>
@@ -208,6 +220,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2J4zHqs">Organic Reusable Bamboo Straws with Coconut Fiber Brush 8 inch Long Drinking Biodegradable Kids and Adults Case</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $6.98</strong> using code:509RRT7S</span></p>
@@ -225,6 +238,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>40% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2GR9YQS">Silicone Ice Cube Trays - Soap Molds - Snowflake Chocolate Molds Candy Molds Silicone Ice Mold Christmas Silicone Molds for Baking</a></p>
     <div class="code_high">
       <p><span>Take <strong>40% off at $16.99</strong> using code:401H5LQ6</span></p>
@@ -242,6 +256,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>30% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2GSGQZt">Toshiba EC042A5C-BS Microwave Oven with Convection Function Smart Sensor and LED Lighting 1.5 Cu.ft Black Stainless</a></p>
     <div class="code_high">
       <p><span>Take <strong>30% off at $199.99</strong> using code:30SDTOSHI</span></p>
@@ -259,6 +274,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>35% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2LfzmUH">LED Glow Light Sticks, Binwo LED Flashing Light Sticks with 15 Multicolor Concert Flashing Stick Come with Batteries</a></p>
     <div class="code_high">
       <p><span>Take <strong>35% off at $23.99</strong> using code:35YG8GJ4</span></p>
@@ -276,6 +292,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>70% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Wlbro9">Keewi Kitchen Faucet Chrome Single Handle Pull Down Kitchen Faucet, Kitchen Sink Faucet, Single Hole Kitchen Faucet...</a></p>
     <div class="code_high">
       <p><span>Take <strong>70% off at $219.00</strong> using code:70I7MPSC</span></p>
@@ -293,6 +310,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>70% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2DEAxqy">CLY 20W LED Motion Sensor Floodlight Outdoor Security Flood Lights 1800 Lumens Waterproof IP66 Cool White 6000K</a></p>
     <div class="code_high">
       <p><span>Take <strong>70% off at $29.99</strong> using code:70TN5SJ5</span></p>
@@ -310,6 +328,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>30% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2XZWw33">Gerintech Rechargable Table Lamp, Dimmable Bedside Lamps with Warm & White Light for Bedrooms</a></p>
     <div class="code_high">
       <p><span>Take <strong>30% off at $19.99</strong> using code:3061T5D4</span></p>
@@ -327,6 +346,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>20% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2WanmoE">KEDSUM WiFi Smart Power Strip, Surge Protector with 4 USB Ports and 4 AC Outlets, Smart Plug Remote Control Outlet with...</a></p>
     <div class="code_high">
       <p><span>Take <strong>20% off at $23.99</strong> using code:20FXQ8IT</span></p>
@@ -344,6 +364,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>15% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Wao3yg">TAGI 26'' Embedded Electric Fireplace Insert, Recessed Electric Stove Heater with Remote Control</a></p>
     <div class="code_high">
       <p><span>Take <strong>15% off at $169.99</strong> using code:20KK46MJ</span></p>
@@ -361,6 +382,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2LgItVc">RFID Blocking Slim Bifold Genuine Leather Minimalist Front Pocket Wallets for Men</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $18.99</strong> using code:502YNS2T</span></p>
@@ -378,6 +400,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>25% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2XXGXce">Rincon Camping Hammock with Tree Straps, Indoor Outdoor, Travel, Portable, Backpack, Double Parachute Hammock with Bag</a></p>
     <div class="code_high">
       <p><span>Take <strong>25% off at $34.99</strong> using code:25EXPLORE</span></p>
@@ -395,6 +418,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2J31tnu">Diamond Candy Women's Mountain Waterproof Jacket Lightweight</a></p>
     <div class="code_high">
       <p><span>Take <strong>50% off at $47.99</strong> using code:504HIYX6</span></p>
@@ -412,6 +436,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>40% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2GS2opk">Dust Masks Disposable with Exhalation Valve N95 Particulate Respirator-Personal Protective Equipment safety mask Activated Carbon Air Filter...</a></p>
     <div class="code_high">
       <p><span>Take <strong>40% off at $20.99</strong> using code:40N93ILF</span></p>
@@ -429,6 +454,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>65% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2ZM2PZt">DOWNCOOL Zippered Mattress Encasement Cover- Include 2 Bonus Pillowcase- Breathable Six Sided Mattress Protector</a></p>
     <div class="code_high">
       <p><span>Take <strong>65% off at $53.99</strong> using code:65PSS7W5</span></p>
@@ -446,6 +472,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>15% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2W97uTf">Mesh Beach Bag, Beach Bags and Totes with Handles, Frank Mully Large Toy Tote Bag with Free Waterproof Phone Pouch...</a></p>
     <div class="code_high">
       <p><span>Take <strong>15% off at $17.29</strong> using code:15KYPNOM</span></p>
@@ -463,6 +490,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>20% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Wlc6WF">YUNDOO Full Face Snorkel Mask, 180°Panoramic View Free Breathing Foldable Tube Design, Anti-Leak Anti-Fog Snorkeling Diving Mask</a></p>
     <div class="code_high">
       <p><span>Take <strong>20% off at $37.99</strong> using code:209YTECD</span></p>
@@ -480,6 +508,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>30% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2XX6Rg1">Epartswide Multifunctional Outdoor Survival Paracord Bracelet with Flint Fire Starter,Compass,Emergency Whistle&Knife/Scraper Pack of 7</a></p>
     <div class="code_high">
       <p><span>Take <strong>30% off at $14.69</strong> using code:30986HQ8</span></p>
@@ -497,6 +526,7 @@
   </div>
   <div class="inner">
     <span class="regular"><em>60% OFF +</em> free shipping</span>
+    <span class="shipping_condition">Free Shipping: Prime or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2XZDzNZ">DareTang HD 1080P WiFi Hidden Spy Camera Alarm Clock Night Vision/Motion Detection/Loop Recording Home Surveillance Cameras</a></p>
     <div class="code_high">
       <p><span>Take <strong>60% off at $54.99</strong> using code:609KEP9V</span></p>
