--- a/app/views/shared/_promocodes_days.html.erb
+++ b/app/views/shared/_promocodes_days.html.erb
@@ -1,3 +1,4 @@
+<li><a href="/promocodes_days/day_06">May. 02. 2019</a></li>
 <li><a href="/promocodes_days/day_05">May. 01. 2019</a></li>
 <li><a href="/promocodes_days/day_04">Apr. 30. 2019</a></li>
 <li><a href="/promocodes_days/day_03">Apr. 29. 2019</a></li>
